objects/testObject1__c.object
<CustomObject>
    <description>削除対象OBject</description>
    <fields>
        <fullName>Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Double__c</fullName>
        <label>Double</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EncryptedString__c</fullName>
        <label>EncryptedString</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiPicklist__c</fullName>
        <label>MultiPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>String__c</fullName>
        <label>String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <label>TextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>カスタム日付</label>
        <type>Date</type>
    </fields>
    <label>×テストオブジェクト1</label>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>Picklist__c</columns>
        <columns>String__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Boolean__c</columns>
        <columns>Currency__c</columns>
        <columns>Date2__c</columns>
        <columns>DateTime__c</columns>
        <columns>Double__c</columns>
        <columns>Email__c</columns>
        <columns>EncryptedString__c</columns>
        <columns>ID__c</columns>
        <columns>MultiPicklist__c</columns>
        <columns>Percent__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>String__c</field>
            <operation>startsWith</operation>
            <value>,STRING1,STRING2</value>
        </filters>
        <label>テスト</label>
    </listViews>
    <nameField>
        <label>テストオブジェクト1名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>